--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -35,22 +35,23 @@ Y chromosome rulebook somewhere.&ensp;
 only didn't you try to dump them on the road or trail, you tried to protect them.&ensp;And that meant gear.&ensp;
 I had a spare leather jacket and gloves.&ensp;I had a helmet that would fit her, well enough anyway.&ensp;
 "Gotta wear jeans and shoes, though."&ensp;
-<br/>&emsp;She gestured at the clothes she wasn't wearing.&ensp;"No?"&ensp;
+<br/>&emsp;Parts tilted subtly this way and that and her free hand gestured at the clothes she wasn't wearing.&ensp;"No?"&ensp;
 <br/>&emsp;"Only in my dreams."&ensp;Of which.&ensp;
 <br/>&emsp;"Okay.&ensp;When?"&ensp;
 <br/>&emsp;"Knock on the back door.&ensp;I've got to check my answering machine."&ensp;I did not.&ensp;But I needed to 
 find a helmet that didn't smell like perfume.&ensp;My last pillion jockey was a real spritzer.&ensp;
 <br/>&emsp;She leapt the symbolic dirt strip separating the driveways and loped toward the back of the Armenian's
-in her flip flops.&ensp;I heard his back door 
-open and close.&ensp;I pushed the bike to the front walk to make way in case either of my housemates came home.&ensp;
-My helmet collection was in the garage.&ensp;I didn't want this woman to see the potted plants so I quickly 
+in her flip flops.&ensp;I was in motion before I heard his back door 
+open and close.&ensp;Might be two minutes, maybe an hour.&ensp;
+<br/>&emsp;My helmet collection was in the garage, but also I wanted access to my car for later.&ensp;
+I didn't want this woman to see the potted plants so I quickly 
 hauled open the big door and pushed my Firebird out.&ensp;A lot of wear and tear starting a cold motor,
-and in those days I enjoyed pushing it, on flat ground anyway.&ensp;I had this idea that it somehow kept
+and in those days I enjoyed that exercise, on flat ground anyway.&ensp;I had this idea it somehow kept
 me honest or appreciative or something.&ensp;Then I went into the garage and closed the big door behind me.&ensp;
-From the grow lights I could see my small collection of brain buckets for smaller heads.&ensp;
+From the grow lights I could see my collection of brain buckets.&ensp;
 I selected two and exitted via the side door.&ensp;
 <br/>&emsp;And there she was.&ensp;Jeans, tennies, tee, and a small duffel.&ensp;I closed the door against the wafting weediness,
-thinking we really needed to put locks on the garage doors.&ensp;Less inconvenient than burglary or jail.&ensp;
+thinking we really needed to put deadbolts on the garage doors.&ensp;Less inconvenient than burglary or jail.&ensp;
 <br/>&emsp;"Can I drop this somewhere?"&ensp;She casually lifted the duffel.&ensp;
 <br/>&emsp;"Sure.&ensp;C'mon inside.&ensp;We'll get you a jacket."&ensp;
 <br/>&emsp;"It's summer," she said.&ensp;
@@ -311,10 +312,10 @@ Two hits apiece and it was getting short.&ensp;I snuffed it against the ragged r
 <br/>&emsp;"Yeah, I was hoping it'd be a bit warmer.&ensp;Would be with less wind."&ensp;
 <br/>&emsp;She turned.&ensp;"Here."&ensp;
 She rolled over and onto me, hands on my shoulders, delicate rhinal foreplay.&ensp;Definitely warmer.&ensp;
-After a few seconds she sat up, arching her back to unclip her top and let it slide down her arms.&ensp;
+After a few moments she sat up, arching her back to unclip her top and let it slide down her arms.&ensp;
 Her hat was tilted back a bit, points of sky-brightness peeking through intersections of woven straw,
-a Florentine halo effect, <i>Saint Ray-Ban With Attendant Areolae</i>.&ensp;
-<br/>&emsp;Some time later, we climbed the cliff and reached the top right as another car parked behind mine.&ensp;
+a Renaissance halo effect, <i>Saint Ray-Ban With Attendant Areolae</i>.&ensp;
+<br/>&emsp;Uncounted pelicans later, we climbed the cliff and reached the top right as another car parked behind mine.&ensp;
 We said hi as they got out and we got in.&ensp;
 <br/>&emsp;"Ooh," she said, "ahh," squirming on the passenger seat.&ensp;I was glad I'd put sheepskin covers over the vinyl.&ensp;
 Completely changed the sun-baked Firebird experience.&ensp;
