--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -15,7 +15,7 @@ The 'Bird's interior smelled like indica and the bud tasted faintly of gasoline 
 <br/>&emsp;The house next door was the mirror layout of ours, so the driveways ran adjacent.&ensp;That house had
 been on the market and recently bought by a smarmy Armenian guy who promptly replaced the front lawn with 
 concrete so customers of his insurance business had somewhere to park.&ensp;No street parking on Curtner Avenue.&ensp;
-<br/>&emsp;That day I pulled up on my motorcycle, clicked it into neutral and hit the kill switch, planning my
+<br/>&emsp;That day I pulled up on my motorcycle, clicked it into neutral and thumbed the kill switch, planning my
 silent glide toward the back.&ensp;I had a dismount technique where, while gliding, I would stand on 
 the left foot peg and swing my right leg over the seat so that when I feathered the brake to a stop
 I'd be ready to flick the kickstand down, all in one fluid motion, much as I'd do on a bicyclc.&ensp;
