--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -49,7 +49,7 @@ hauled open the big door and pushed my Firebird out.&ensp;A lot of wear and tear
 and in those days I enjoyed that exercise, on flat ground anyway.&ensp;I had this idea it somehow kept
 me honest or appreciative or something.&ensp;Then I went into the garage and closed the big door behind me.&ensp;
 From the grow lights I could see my collection of brain buckets.&ensp;
-I selected two and exitted via the side door.&ensp;
+I selected one of the smalls and exitted via the side door.&ensp;
 <br/>&emsp;And there she was.&ensp;Jeans, tennies, tee, and a small duffel.&ensp;I closed the door against the wafting weediness,
 thinking we really needed to put deadbolts on the garage doors.&ensp;Less inconvenient than burglary or jail.&ensp;
 <br/>&emsp;"Can I drop this somewhere?"&ensp;She casually lifted the duffel.&ensp;
