--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -84,9 +84,10 @@ over the seat but I stopped her with a hand on her shoulder.&ensp;Another touch,
 sagged with the extra weight but only an inch.&ensp;I tended toward stiff settings.&ensp;
 <br/>&emsp;I started the bike just
 as my housemate pulled into the drive in his ancient VW Fastback.&ensp;He stopped.&ensp;I waved and she did too.&ensp;
-The VW went so slowly down the driveway I figured he was watching us in his mirror.&ensp;
+I pushed back to the edge and the VW edged past and down the driveway,
+so slowly I figured he was watching us in his mirror.&ensp;
 <br/>&emsp;I eased the bike across our driveway, between a couple bunches of the Armenian's flowers in the dirt strip,
-then acrross his driveway and rode a diagonal across his new concrete, off the curb and onto Curtner.&ensp;
+then acrross his driveway and rode a diagonal across his new concrete and curb cut, and onto Curtner.&ensp;
 In case he was watching, I suppose.&ensp;Any good raid involves a trespass.&ensp;
 <br/>&emsp;We were only three houses from the light and it was 
 red.&ensp;"Lean into corners with me," I said over my shoulder.&ensp;
