--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -137,7 +137,7 @@ for her.&ensp;
 <br/>&emsp;"That's how they come.&ensp;They don't reuse them.&ensp;Wipe it clean, though, before you put it in your pocket."&ensp;
 <br/>&emsp;I watched her pick her favorite and lick a smidge of cheese from its edge.&ensp;Nice hands, no polish.&ensp;
 Nice lips, also bare.&ensp;
-<br/>&emsp;I ran us back to Willow Glen.&ensp;It was dark now.&ensp;Our driveway was passable, but the area in front of the 
+<br/>&emsp;I ran us back to Willow Glen.&ensp;It was dark now.&ensp;The area in front of the 
 garage was a bit crowded with my Firebird, the Fastback, and my other housemate's Honda Civic.&ensp;
 But there's always room to park a bike.&ensp;We went inside where housemates and cats were watching TV in a room
 maybe intended for a dining room table.&ensp;Four heads turned when we came in.&ensp;
@@ -186,7 +186,7 @@ Then she eased back against the headrest, holding the joint my way.&ensp;"I like
 <br/>&emsp;"What?" she echoed.&ensp;
 <br/>&emsp;"What do you mean?&ensp;Style."&ensp;
 <br/>&emsp;"Oh," she said.&ensp;"I don't like pinners."&ensp;
-<br/>&emsp;"Ah," I said.&ensp;"Me neither.&ensp;Taste like paper."&ensp;I snuffed and stowed the J and put the car in reverse,
+<br/>&emsp;"Ah," I said.&ensp;"Me either.&ensp;Taste like paper."&ensp;I snuffed and stowed the J and put the car in reverse,
 easing down the drive.&ensp;Through the kitchen window I saw the coach had just filled a glass with water.&ensp;
 He raised it.&ensp;I flashed him a vee through the windshield.&ensp;
 <br/>&emsp;To avoid scraping the tailpipes of the Firebird on the street I'd learned the magic angle to ease out.&ensp;
