--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -84,10 +84,10 @@ over the seat but I stopped her with a hand on her shoulder.&ensp;Another touch,
 sagged with the extra weight but only an inch.&ensp;I tended toward stiff settings.&ensp;
 <br/>&emsp;I started the bike just
 as my housemate pulled into the drive in his ancient VW Fastback.&ensp;He stopped.&ensp;I waved and she did too.&ensp;
-I pushed back to the edge and the VW edged past and down the driveway,
+I pushed back so the rear tire was touching our lawn and the VW edged past us and down the driveway,
 so slowly I figured he was watching us in his mirror.&ensp;
 <br/>&emsp;I eased the bike across our driveway, between a couple bunches of the Armenian's flowers in the dirt strip,
-then acrross his driveway and rode a diagonal across his new concrete and curb cut, and onto Curtner.&ensp;
+then acrross his driveway and rode a diagonal across his new concrete and curb cut, and out onto Curtner.&ensp;
 In case he was watching, I suppose.&ensp;Any good raid involves a trespass.&ensp;
 <br/>&emsp;We were only three houses from the light and it was 
 red.&ensp;"Lean into corners with me," I said over my shoulder.&ensp;
@@ -265,7 +265,7 @@ That smile now assymetrical.&ensp;
 It stayed on.&ensp;
 <br/>&emsp;Morning came with the scrape and soft slam of the back door opening and closing.&ensp;
 <br/>&emsp;Out my window I saw the coach get into his Civic.&ensp;The Fastback was already gone.&ensp;I'd slept well.&ensp;I usually do.&ensp;
-<br/>&emsp;Beverly was sitting on the edge of the mattress reading my journal.&ensp;It was a large sketch pad 
+<br/>&emsp;Beverly was sitting on the end of the mattress reading my journal.&ensp;It was a large sketch pad 
 because I didn't like to see my thoughts ruled.&ensp;I used a Fountain Pentel for it's 
 flexible tip.&ensp;Occasionally, a letter stroke would release tension and with it a delicate spray of blue.&ensp;
 <br/>&emsp;"You have nice penmanship."&ensp;
