--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -72,7 +72,7 @@ the closet and turned to hand it to her.&ensp;
 her a pair of gloves.&ensp;She pulled one on.&ensp;
 <br/>&emsp;"Uh," I said, "helmet first."&ensp;This was not a woman accustomed to the procedure.&ensp;Unless your gloves
 fit perfectly it's impossible to do up a helmet strap.&ensp;It became obvious the strap buckle was a 
-new thing too.&ensp;I'd given her the helmet that I guessed would fit best, and like many people, she had
+new thing too.&ensp;I'd given her the helmet that I guessed would fit best and, like many people, she had
 that look of surprise at the novelty, the change in sounds.&ensp;Doing the strap brought us close.&ensp;
 <br/>&emsp;"Shake your head a bit."&ensp;Not too much slop.&ensp;"Good to go."&ensp;I lead us out.&ensp;
 <br/>&emsp;"Bye, Fred," she said.&ensp;
@@ -216,7 +216,7 @@ attracted a friendly challenger at the first red light.&ensp;Vroom, vroom.&ensp;
 <br/>&emsp;I looked at her.&ensp;"You see a cop?"&ensp;
 <br/>&emsp;"No, and I really don't want to."&ensp;
 <br/>&emsp;I turned to the guy on my left.&ensp;"Not tonight, man.&ensp;The lady isn't into it."&ensp;
-<br/>&emsp;He leaned over the wheel of his GTO to have a look, then laughed the laugh of the unemcumbered.&ensp;
+<br/>&emsp;He leaned over the wheel of his GTO to have a look, then laughed the laugh of the unencumbered.&ensp;
 We waited through the long cycle, admiring each others' noises.&ensp;
 <br/>&emsp;She was watching the cross traffic and when it slowed she put her hand over mine as if to 
 help or prevent me shifting.&ensp;A picture is worth a thousand words, but a first direct touch 
