--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -148,14 +148,14 @@ gave us a shaka sign.&ensp;He seemed to share Fred's opinion.&ensp;
 <br/>&emsp;In my bedroom I tossed my helmet and jacket and gloves on the mattresses, noting her duffel there.&ensp;
 I helped her again undo the D-ring strap closure on the helmet.&ensp;
 <br/>&emsp;"Need a bathroom break?"&ensp;It had been a few hours.&ensp;
-<br/>&emsp;"Um--okay."&ensp;
+<br/>&emsp;"Um&mdash;okay."&ensp;
 <br/>&emsp;I opened the other door in my odd study/bedroom.&ensp;The bathroom door was a few feet down the hall.&ensp;
 <br/>&emsp;Alone now, I started trying to assemble options, but very soon heard the toilet flush and she was back.&ensp;
 <br/>&emsp;"Quick," I said.&ensp;
 <br/>&emsp;"Right down to business," she answered.&ensp;
 <br/>&emsp;I closed the hall door, and opened the glass-paned door and we were again the subject of attention.&ensp;
-I said, "We're--"&ensp;I looked at her.&ensp;She'd been looking at the spectators, but with my pause she faced me.&ensp;
-I continued, "--going to the movies?"&ensp;
+I said, "We're&mdash;"&ensp;I looked at her.&ensp;She'd been looking at the spectators, but with my pause she faced me.&ensp;
+I continued, "&mdash;going to the movies?"&ensp;
 <br/>&emsp;"Sure," she said.&ensp;Her eyes were blue anywhere.&ensp;
 <br/>&emsp;"Nice," said the coach.&ensp;"Have fun, guys."&ensp;
 <br/>&emsp;Out the back door, I opened the passenger door of the Firebird.&ensp;
@@ -348,17 +348,17 @@ toward the back.&ensp;Coincidence.&ensp;Or maybe they'd met after work somewhere
 <br/>&emsp;I paused again.&ensp;I checked my voice.&ensp;"Well, if we need to establish some rules, we can.&ensp;
 I understand if a fourth person starts staying here, that's a thing."&ensp;
 <br/>&emsp;"Yeah," he snorted.&ensp;
-<br/>&emsp;"So," I said, "I'm prepared to pay a larger perentage of rent, if--"&ensp;
-<br/>&emsp;"It's not that," he said.&ensp;"I've got--" and he thumbed toward the garage.&ensp;
+<br/>&emsp;"So," I said, "I'm prepared to pay a larger perentage of rent, if&mdash;"&ensp;
+<br/>&emsp;"It's not that," he said.&ensp;"I've got&mdash;" and he thumbed toward the garage.&ensp;
 <br/>&emsp;"Well," I said, "she smokes weed like us.&ensp;I don't see her calling the cops."&ensp;
 <br/>&emsp;"But what about friends?"&ensp;
-<br/>&emsp;"Like, thieves?&ensp;I'll admit I don't know her that well.&ensp;But if she starts to act fishy--"&ensp;
-<br/>&emsp;"It'd happen fast," he interrupted.&ensp;"She'll call someone while we're all out, and--"&ensp;
+<br/>&emsp;"Like, thieves?&ensp;I'll admit I don't know her that well.&ensp;But if she starts to act fishy&mdash;"&ensp;
+<br/>&emsp;"It'd happen fast," he interrupted.&ensp;"She'll call someone while we're all out, and&mdash;"&ensp;
 <br/>&emsp;"Right, so I'll put locks on the doors.&ensp;Today."&ensp;
 <br/>&emsp;The coach had been standing by, all Californian.&ensp;"So," he asked Mr. Fastback, "will that do it?"&ensp;
 <br/>&emsp;"What about my stereo?"&ensp;
 <br/>&emsp;"Look," I said, "I'll replace anything that goes missing.&ensp;Gosh, these concerns seem to have 
-come up pretty quick.&ensp;I mean, she's only been here one night--"&ensp;
+come up pretty quick.&ensp;I mean, she's only been here one night&mdash;"&ensp;
 <br/>&emsp;"Is she staying tonight?" Fastback pressed.&ensp;
 <br/>&emsp;"Unless I'm going to take her to a hotel," I answered.&ensp;I checked myself again.&ensp;
 "Tell you what, guys.&ensp;Let's all go to dinner."&ensp;
@@ -385,9 +385,9 @@ Beneath the springs was a piece of plywood.&ensp;
 <br/>&emsp;The coach flipped the passenger seat forward and got in.&ensp;Mr. Fastback got behind the wheel.&ensp;
 <br/>&emsp;I told her:  "Ask our driver how that hole came to be."&ensp;
 <br/>&emsp;She peered at him in the mirror as he backed down the driveway.&ensp;
-<br/>&emsp;"Ah," he said.&ensp;"Yeah.&ensp;Well.&ensp;Me and--my ex were, uh--"&ensp;
+<br/>&emsp;"Ah," he said.&ensp;"Yeah.&ensp;Well.&ensp;Me and&mdash;my ex were, uh&mdash;"&ensp;
 <br/>&emsp;"Getting heavy," the coach said.&ensp;
-<br/>&emsp;"--yeah.&ensp;And it turns out that the battery is right underneath the seat.&ensp;So when two people . . .&ensp;
+<br/>&emsp;"&mdash;yeah.&ensp;And it turns out that the battery is right underneath the seat.&ensp;So when two people . . .&ensp;
 with two people's weight, it was enough to . . ."&ensp;He was smirking and snorking by now.&ensp;
 <br/>&emsp;The coach finished:  "To make the seat springs make contact with the battery terminals."&ensp;
 <br/>&emsp;Beverly crowded against me, wary of the melted vinyl.&ensp;
