--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -51,7 +51,7 @@ me honest or appreciative or something.&ensp;Then I went into the garage and clo
 From the grow lights I could see my collection of brain buckets.&ensp;
 I selected one of the smalls and exitted via the side door.&ensp;
 <br/>&emsp;And there she was.&ensp;Jeans, tennies, tee, and a small duffel.&ensp;I closed the door against the wafting weediness,
-thinking we really needed to put deadbolts on the garage doors.&ensp;Less inconvenient than burglary or jail.&ensp;
+thinking we really needed to put locks on the garage doors.&ensp;Less inconvenient than burglary or jail.&ensp;
 <br/>&emsp;"Can I drop this somewhere?"&ensp;She casually lifted the duffel.&ensp;
 <br/>&emsp;"Sure.&ensp;C'mon inside.&ensp;We'll get you a jacket."&ensp;
 <br/>&emsp;"It's summer," she said.&ensp;
@@ -354,7 +354,7 @@ I understand if a fourth person starts staying here, that's a thing."&ensp;
 <br/>&emsp;"But what about friends?"&ensp;
 <br/>&emsp;"Like, thieves?&ensp;I'll admit I don't know her that well.&ensp;But if she starts to act fishy&mdash;"&ensp;
 <br/>&emsp;"It'd happen fast," he interrupted.&ensp;"She'll call someone while we're all out, and&mdash;"&ensp;
-<br/>&emsp;"Right, so I'll put locks on the doors.&ensp;Today."&ensp;
+<br/>&emsp;"Right, so I'll put locks on the doors."&ensp;His chickens, his farm.&ensp;But, no, I'd benefit, too.&ensp;
 <br/>&emsp;The coach had been standing by, all Californian.&ensp;"So," he asked Mr. Fastback, "will that do it?"&ensp;
 <br/>&emsp;"What about my stereo?"&ensp;
 <br/>&emsp;"Look," I said, "I'll replace anything that goes missing.&ensp;Gosh, these concerns seem to have 
