--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -9,7 +9,7 @@ Older houses.&ensp;
 Ours had a long kitchen running half the length of the east side of the house
 with limited counters and space for a breakfast table we didn't have.&ensp;
 Lino, walls, counters, cabinets and ceiling in relentless smiley yellow like some psych experiment.&ensp;
-Sometimes my cat would yak his breakfast and I'd sympathize but tell him at least he wasn't dealing with scrambled eggs.&ensp;
+Sometimes my cat would yak his breakfast and I'd sympathize but remind him he wasn't dealing with scrambled eggs.&ensp;
 <br/>&emsp;The driveway to the garage ran along that side of the house.&ensp;My Firebird was in the garage
 keeping my housemate's pot plants company.&ensp;They were cross-adulterating.&ensp;
 The 'Bird's interior smelled like indica and the bud tasted faintly of gasoline and tires.&ensp;
