--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -6,8 +6,8 @@
 <p/>
 I'd been living in Willow Glen for a couple years.&ensp;It was a reasonably nice part of San Jose.&ensp;
 Older houses.&ensp;
-Ours had a long kitchen running half the length of the east side of the house
-with limited counters and space for a breakfast table we didn't have.&ensp;
+Ours had a long kitchen running half the length of the east side of the house.&ensp;
+The table had arrived in California via covered wagon or maybe been made from one.&ensp;
 Lino, walls, counters, cabinets and ceiling in relentless smiley yellow like some psych experiment.&ensp;
 Scrambled eggs could be amusing, or not, or really not, a baseline for the day.&ensp;
 <br/>&emsp;The driveway to the garage ran along that side of the house.&ensp;My Firebird was in the garage
@@ -21,7 +21,7 @@ silent glide toward the back.&ensp;I had a dismount technique where, while glidi
 the left foot peg and swing my right leg over the seat so that when I feathered the brake to a stop
 I'd be ready to flick the kickstand down, all in one fluid motion, much as I'd do on a bicyclc.&ensp;
 But I stopped at the front because of the woman in the bright pink bikini with the little watering can 
-sprinkling the new bunches of flowers edging the new concrete.&ensp;The flowers paled.&ensp;
+sprinkling the flowers recently planted in the dirt strip between the driveways.&ensp;The flowers paled.&ensp;
 <br/>&emsp;She sashayed across the Armenian's driveway to mine,
 and put the tip of her index finger on the top edge of my
 bike's mirror and said:  "I like motorcycles."&ensp;
@@ -41,7 +41,7 @@ I had a spare leather jacket and gloves.&ensp;I had a helmet that would fit her,
 <br/>&emsp;"Okay.&ensp;When?"&ensp;
 <br/>&emsp;"Knock on the back door.&ensp;I've got to check my answering machine."&ensp;I did not.&ensp;But I needed to 
 find a helmet that didn't smell like perfume.&ensp;My last pillion jockey was a real spritzer.&ensp;
-<br/>&emsp;She leapt the symbolic dirt strip separating the driveways and loped toward the back of the Armenian's
+<br/>&emsp;She leapt the flowers she'd been watering and loped toward the back of the Armenian's
 in her flip flops.&ensp;I was in motion before I heard his back door 
 open and close.&ensp;Might be two minutes, maybe an hour.&ensp;
 <br/>&emsp;My helmet collection was in the garage, but also I wanted access to my car for later.&ensp;
@@ -391,7 +391,7 @@ Beneath the springs was a piece of plywood.&ensp;
 <br/>&emsp;"&mdash;yeah.&ensp;And it turns out that the battery is right underneath the seat.&ensp;So when two people . . .&ensp;
 with two people's weight, it was enough to . . ."&ensp;He was smirking and snorking by now.&ensp;
 <br/>&emsp;The coach finished:  "To make the seat springs make contact with the battery terminals."&ensp;
-<br/>&emsp;Beverly crowded against me, wary of the melted vinyl.&ensp;
+<br/>&emsp;Beverly crowded her jeans against mine, wary of the melted vinyl.&ensp;
 She peeked again at the rearview and started laughing.&ensp;A rich contralto, highly contagious.&ensp;
 It went on for the first block or so.&ensp;She ran down, then covered her mouth and started again.&ensp;
 We were wiping our eyes when we got to the place.&ensp;As she was getting out she gave the hole and 
