--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -7,11 +7,11 @@
 I'd been living in Willow Glen for a couple years.&ensp;It was a reasonably nice part of San Jose.&ensp;
 Older houses.&ensp;
 Ours had a long kitchen running half the length of the east side of the house.&ensp;
-The table had arrived in California via covered wagon or maybe been made from one.&ensp;
-Lino, walls, counters, cabinets and ceiling in relentless smiley yellow like some psych experiment.&ensp;
+It contained our only table, a thing that had arrived in California via covered wagon or maybe been made from one.&ensp;
+Lino, walls, counters, cabinets and ceiling were in in relentless smiley yellow like some psych experiment.&ensp;
 Scrambled eggs could be amusing, or not, or really not, a baseline for the day.&ensp;
 <br/>&emsp;The driveway to the garage ran along that side of the house.&ensp;My Firebird was in the garage
-keeping my housemate's pot plants company.&ensp;They were cross-adulterating.&ensp;
+keeping my housemate's pot plants company.&ensp;Cross-adulterating.&ensp;
 The 'Bird's interior smelled like indica and the bud tasted faintly of gasoline and tires.&ensp;
 <br/>&emsp;The house next door was the mirror layout of ours, so the driveways ran adjacent.&ensp;That house had
 been on the market and recently bought by a smarmy Armenian guy who promptly replaced the front lawn with 
