--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -8,7 +8,7 @@ I'd been living in Willow Glen for a couple years.&ensp;It was a reasonably nice
 Older houses.&ensp;
 Ours had a long kitchen running half the length of the east side of the house.&ensp;
 It contained our only table, a thing that had arrived in California via covered wagon or maybe been made from one.&ensp;
-Lino, walls, counters, cabinets and ceiling were in in relentless smiley yellow like some psych experiment.&ensp;
+Lino, walls, counters, cabinets and ceiling were in relentless smiley yellow like some psych experiment.&ensp;
 Scrambled eggs could be amusing, or not, or really not, a baseline for the day.&ensp;
 <br/>&emsp;The driveway to the garage ran along that side of the house.&ensp;My Firebird was in the garage
 keeping my housemate's pot plants company.&ensp;Cross-adulterating.&ensp;
