--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -22,7 +22,7 @@ the left foot peg and swing my right leg over the seat so that when I feathered 
 I'd be ready to flick the kickstand down, all in one fluid motion, much as I'd do on a bicyclc.&ensp;
 But I stopped at the front because of the woman in the bright pink bikini with the little watering can 
 sprinkling the flowers recently planted in the dirt strip between the driveways.&ensp;The flowers paled.&ensp;
-<br/>&emsp;She sashayed across the Armenian's driveway to mine,
+<br/>&emsp;She sashayed from the Armenian's driveway to mine,
 and put the tip of her index finger on the top edge of my
 bike's mirror and said:  "I like motorcycles."&ensp;
 <br/>&emsp;Pulling off my helmet gave me a few seconds.&ensp;I said:  "It doesn't need watering."&ensp;
@@ -52,7 +52,8 @@ me honest or appreciative or something.&ensp;Then I went into the garage and clo
 From the grow lights I could see my collection of brain buckets.&ensp;
 I selected one of the smalls and exitted via the side door.&ensp;
 <br/>&emsp;And there she was.&ensp;Jeans, tennies, tee, and a small duffel.&ensp;I closed the door against the wafting weediness,
-thinking we really needed to put locks on the garage doors.&ensp;Less inconvenient than burglary or jail.&ensp;
+for the nth and most acute time aware it needed a lock.&ensp;
+Less inconvenient than burglary or jail.&ensp;
 <br/>&emsp;"Can I drop this somewhere?"&ensp;She casually lifted the duffel.&ensp;
 <br/>&emsp;"Sure.&ensp;C'mon inside.&ensp;We'll get you a jacket."&ensp;
 <br/>&emsp;"It's summer," she said.&ensp;
