--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -53,7 +53,8 @@ From the grow lights I could see my collection of brain buckets.&ensp;
 I selected one of the smalls and exitted via the side door.&ensp;
 <br/>&emsp;And there she was.&ensp;Jeans, tennies, tee, and a small duffel.&ensp;I closed the door against the wafting weediness,
 for the nth and most acute time aware it needed a lock.&ensp;
-Less inconvenient than burglary or jail.&ensp;
+Conspiracy is a taxing thrill, like running toward a cliff.&ensp;
+A lock would let me walk with a blindfold.&ensp;Slow the approach of danger and it's easier to ignore.&ensp;
 <br/>&emsp;"Can I drop this somewhere?"&ensp;She casually lifted the duffel.&ensp;
 <br/>&emsp;"Sure.&ensp;C'mon inside.&ensp;We'll get you a jacket."&ensp;
 <br/>&emsp;"It's summer," she said.&ensp;
@@ -95,7 +96,7 @@ In case he was watching, I suppose.&ensp;Any good raid involves a trespass.&ensp
 red.&ensp;"Lean into corners with me," I said over my shoulder.&ensp;
 <br/>&emsp;"Okay."&ensp;Her arms were already around my waist, hands clasped.&ensp;While waiting for green,
 she unclasped them and put her palms on my thighs.&ensp;
-<br/>&emsp;I saw the light for cross traffic go yellow and said, "Okay."&ensp;She clasped her hands again.&ensp;
+<br/>&emsp;The cross traffic light went yellow and I said, "Okay."&ensp;She clasped her hands again.&ensp;
 <br/>&emsp;I drove through downtown Willow Glen thinking about a coffee shop but it was too close.&ensp;So I headed for
 Los Gatos.&ensp;She was leaning correctly in turns.&ensp;Curving onto the highway ramp I said, "Hold on!"&ensp;
 I felt her grip tighten.&ensp;I gave her what, in my experience, women seem to want from a motorcycle ride.&ensp;
