--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -1,6 +1,6 @@
 <html>
 <body style="margin: 30px; margin-top: 30px;">
-<h3>Pink Bikini</h3>
+<h3>Pink Blindfold</h3>
 <p/>
 <i> Apr. 28, 1987 </i>
 <p/>
@@ -256,7 +256,7 @@ helmets and gloves from the mattresses.&ensp;There was her duffel.&ensp;
 <br/>&emsp;"Huh."&ensp;
 <br/>&emsp;"Can I take off my shoes?"&ensp;
 <br/>&emsp;"Sure."&ensp;
-<br/>&emsp;She sat on the mattress, undid her laces, removed her shoes, stood, and slid out of her shirt and pants,
+<br/>&emsp;She sat on the mattress, undid her laces, removed her shoes, stood, and slid out of her shirt and jeans,
 and then the bikini.&ensp;Things went everywhere, snowing girl stuff.&ensp;
 <br/>&emsp;"Want to take yours off?" she asked.&ensp;This woman had octaves.&ensp;
 <br/>&emsp;"Sure."&ensp;I wasn't as graceful, but tried to be.&ensp;Standing.&ensp;Socks are spoilers.&ensp;
@@ -316,7 +316,8 @@ Two hits apiece and it was getting short.&ensp;I snuffed it against the ragged r
 <br/>&emsp;"Yeah, I was hoping it'd be a bit warmer.&ensp;Would be with less wind."&ensp;
 <br/>&emsp;She turned.&ensp;"Here."&ensp;
 She rolled over and onto me, hands on my shoulders, delicate rhinal foreplay.&ensp;Definitely warmer.&ensp;
-After a few moments she sat up, arching her back to unclip her top and let it slide down her arms.&ensp;
+After a few moments she sat up, arching her back to unclip her top and let it slide down her arms 
+to briefly cover my eyes.&ensp;
 Her hat was tilted back a bit, points of sky-brightness peeking through intersections of woven straw,
 a Renaissance halo effect, <i>Saint Ray-Ban With Attendant Areolae</i>.&ensp;
 <br/>&emsp;Uncounted pelicans later, we climbed the cliff and reached the top right as another car parked behind mine.&ensp;
