--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -7,19 +7,19 @@
 I'd been living in Willow Glen for a couple years.&ensp;It was a reasonably nice part of San Jose.&ensp;
 Older houses.&ensp;
 Ours had a long kitchen running half the length of the east side of the house.&ensp;
-It contained our only table, a thing that had arrived in California via covered wagon or maybe been made from one.&ensp;
 Lino, walls, counters, cabinets and ceiling were in relentless smiley yellow like some psych experiment.&ensp;
 Scrambled eggs could be amusing, or not, or really not, a baseline for the day.&ensp;
-<br/>&emsp;The driveway to the garage ran along that side of the house.&ensp;My Firebird was in the garage
+<br/>&emsp;The driveway ran the length of that side of the house.&ensp;My Firebird was in the detached garage
 keeping my housemate's pot plants company.&ensp;Cross-adulterating.&ensp;
 The 'Bird's interior smelled like indica and the bud tasted faintly of gasoline and tires.&ensp;
 <br/>&emsp;The house next door was the mirror layout of ours, so the driveways ran adjacent.&ensp;That house had
-been on the market and recently bought by a smarmy Armenian guy who promptly replaced the front lawn with 
-concrete so customers of his insurance business had somewhere to park.&ensp;No street parking on Curtner Avenue.&ensp;
+been on the market and recently bought by a smarmy guy who hung an Armenian flag and insurance sign
+and replaced the front lawn with concrete so his customers had somewhere to park.&ensp;No street parking on Curtner Avenue.&ensp;
 <br/>&emsp;That day I pulled up on my motorcycle, clicked it into neutral and thumbed the kill switch to make my
-silent glide toward the back.&ensp;I had a dismount technique where, while gliding, I would stand on 
+silent glide toward the back.&ensp;
+While gliding, I would usually stand on 
 the left foot peg and swing my right leg over the seat so that when I feathered the brake to a stop
-I'd be ready to flick the kickstand down, all in one fluid motion, much as I'd do on a bicyclc.&ensp;
+I'd flick the kickstand down and step away, much as I'd do on a bicycle.&ensp;
 But I stopped at the front because of the woman in the bright pink bikini with the little watering can 
 sprinkling the flowers recently planted in the dirt strip between the driveways.&ensp;The flowers paled.&ensp;
 <br/>&emsp;She sashayed from the Armenian's driveway to mine,
