--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -1,6 +1,6 @@
 <html>
 <body style="margin: 30px; margin-top: 30px;">
-<h3>Pink Blindfold</h3>
+<h3>Pink Bikini</h3>
 <p/>
 <i> Apr. 28, 1987 </i>
 <p/>
@@ -53,8 +53,6 @@ From the grow lights I could see my collection of brain buckets.&ensp;
 I selected one of the smalls and exitted via the side door.&ensp;
 <br/>&emsp;And there she was.&ensp;Jeans, tennies, tee, and a small duffel.&ensp;I closed the door against the wafting weediness,
 for the nth and most acute time aware it needed a lock.&ensp;
-Conspiracy is a taxing thrill, like running toward a cliff.&ensp;
-A lock would let me walk with a blindfold.&ensp;Slow the approach of danger and it's easier to ignore.&ensp;
 <br/>&emsp;"Can I drop this somewhere?"&ensp;She casually lifted the duffel.&ensp;
 <br/>&emsp;"Sure.&ensp;C'mon inside.&ensp;We'll get you a jacket."&ensp;
 <br/>&emsp;"It's summer," she said.&ensp;
@@ -316,8 +314,7 @@ Two hits apiece and it was getting short.&ensp;I snuffed it against the ragged r
 <br/>&emsp;"Yeah, I was hoping it'd be a bit warmer.&ensp;Would be with less wind."&ensp;
 <br/>&emsp;She turned.&ensp;"Here."&ensp;
 She rolled over and onto me, hands on my shoulders, delicate rhinal foreplay.&ensp;Definitely warmer.&ensp;
-After a few moments she sat up, arching her back to unclip her top and let it slide down her arms 
-to briefly cover my eyes.&ensp;
+After a few moments she sat up, arching her back to unclip her top and let it slide down her arms.&ensp;
 Her hat was tilted back a bit, points of sky-brightness peeking through intersections of woven straw,
 a Renaissance halo effect, <i>Saint Ray-Ban With Attendant Areolae</i>.&ensp;
 <br/>&emsp;Uncounted pelicans later, we climbed the cliff and reached the top right as another car parked behind mine.&ensp;
@@ -345,7 +342,8 @@ toward the back.&ensp;Coincidence.&ensp;Or maybe they'd met after work somewhere
 <br/>&emsp;"Yeah."&ensp;
 <br/>&emsp;"Thing is," said my other housemate, Leon's owner, Mr. Fastback, "like, who <i>is</i> she?"&ensp;
 <br/>&emsp;"Beverly," I said.&ensp;
-<br/>&emsp;There was a pause.&ensp;I said, "We need some locks on the garage.&ensp;I'll do that."&ensp;
+<br/>&emsp;There was a pause.&ensp;I said, "We need some locks on the garage."&ensp;
+Careful now.&ensp;No guilt.&ensp;A favor.&ensp;"I can take care of that for us."&ensp;
 <br/>&emsp;"When?" he asked.&ensp;"She seems to just <i>be</i> here."&ensp;
 <br/>&emsp;A day.&ensp;I said:  "I know."&ensp;And I did.&ensp;"But I think she understands the situation."&ensp;
 <br/>&emsp;"Do <i>you</i>?"&ensp;
