--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -73,7 +73,7 @@ the closet and turned to hand it to her.&ensp;
 her a pair of gloves.&ensp;She pulled one on.&ensp;
 <br/>&emsp;"Uh," I said, "my mistake.&ensp;Let's try the helmet first."&ensp;Unless your gloves
 fit perfectly it's impossible to do up a helmet strap.&ensp;
-Helmets are like shoes; your first time, you need help.&ensp;Sleek ears and an oval head, so it went on easily.&ensp;
+Sleek ears and an oval head, so it went on easily.&ensp;
 She had that look of surprise at the novelty, the change in sounds.&ensp;Doing the strap brought us close.&ensp;
 <br/>&emsp;"Shake your head a bit."&ensp;Not too much slop.&ensp;"Good to go."&ensp;I lead us out.&ensp;
 <br/>&emsp;"Bye, Fred," she said.&ensp;
