--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -71,9 +71,9 @@ the closet and turned to hand it to her.&ensp;
 <br/>&emsp;"Fred," I said, "shoo."&ensp;He did a lithe feline uey.&ensp;
 <br/>&emsp;I held out the jacket and she put it on.&ensp;The sleeves were long so I folded them back.&ensp;Then I handed
 her a pair of gloves.&ensp;She pulled one on.&ensp;
-<br/>&emsp;"Uh," I said, "my mistake.&ensp;Let's try the helmet first."&ensp;Unless your gloves
-fit perfectly it's impossible to do up a helmet strap.&ensp;
-Sleek ears and an oval head, so it went on easily.&ensp;
+<br/>&emsp;"Uh," I said, "my mistake.&ensp;Let's try the helmet."&ensp;Unless your gloves
+fit perfectly it's impossible to fasten a helmet strap.&ensp;
+Neat ears and an oval head, so it slid on easily.&ensp;
 She had that look of surprise at the novelty, the change in sounds.&ensp;Doing the strap brought us close.&ensp;
 <br/>&emsp;"Shake your head a bit."&ensp;Not too much slop.&ensp;"Good to go."&ensp;I lead us out.&ensp;
 <br/>&emsp;"Bye, Fred," she said.&ensp;
