--- a/life/Pink_Bikini.html
+++ b/life/Pink_Bikini.html
@@ -163,16 +163,14 @@ I continued, "&mdash;going to the movies?"&ensp;
 She assessed what the dome light revealed and got in.&ensp;
 <br/>&emsp;I came around and hopped in and started the car.&ensp;
 <br/>&emsp;"Ooh."&ensp;
-<br/>&emsp;"I'll let it warm up a bit," I said, fiddling the manual choke so I wouldn't have to keep my foot on the gas.&ensp;
+<br/>&emsp;"I'll let it warm up a bit," I said, setting the manual choke so I wouldn't have to keep my foot on the gas.&ensp;
 <br/>&emsp;The dome was off but I turned it back on.&ensp;
-<br/>&emsp;She was casually reclined and looking at me.&ensp;Between us was a prototype center console I had 
-whittled from a large piece of smooth-sided rather stiff foam I'd found glued to the inside of a 
-large cardboard box that had contained a very heavy piece of equipment delivered to a company
-sharing the parking lot where I worked.&ensp;It covered the transmission hump of the Firebird.&ensp;It was white,
-not matching the car's blue interor, a long, obviously owner-fabricated, flat surface.&ensp;
+<br/>&emsp;She was casually reclined and looking at me.&ensp;
+Between us was a center console made of layered planks of ethafoam I'd pulled from shipping cartons at work.&ensp;
 <br/>&emsp;"Okay if I rest my arm on this?"&ensp;
-<br/>&emsp;"That's what it's for."&ensp;
-<br/>&emsp;Her hand immediately found the Bic in it's slot at the front of the foam block.&ensp;
+<br/>&emsp;"Uh huh."&ensp;
+<br/>&emsp;I put mine on it and flicked the headlight switch, perfectly placed near the shifter.&ensp;
+Her fingers found the Bic in its slot.&ensp;
 <br/>&emsp;"You smoke?"&ensp;
 <br/>&emsp;"Not cigarettes."&ensp;
 <br/>&emsp;"Me neither."&ensp;She manipulated the lighter with great familiarity.&ensp;"Well, not for a while now."&ensp;
@@ -257,7 +255,8 @@ helmets and gloves from the mattresses.&ensp;There was her duffel.&ensp;
 <br/>&emsp;She sat on the mattress, undid her laces, removed her shoes, stood, and slid out of her shirt and jeans,
 and then the bikini.&ensp;Things went everywhere, snowing girl stuff.&ensp;
 <br/>&emsp;"Want to take yours off?" she asked.&ensp;This woman had octaves.&ensp;
-<br/>&emsp;"Sure."&ensp;I wasn't as graceful, but tried to be.&ensp;Standing.&ensp;Socks are spoilers.&ensp;
+<br/>&emsp;"Sure."&ensp;I wasn't as graceful, but tried to be.&ensp;
+Standing.&ensp;Boots I could unzip and step out of, but my second sock nearly had me hopping.&ensp;
 <br/>&emsp;She crossed her ankles and turned in front of me like a ballerina on a music box.&ensp;
 No butt ink or body hair.&ensp;
 Preference versus causation.&ensp;
@@ -301,7 +300,7 @@ It didn't and I liked the color on her.&ensp;
 A close call, given its points of contact with her body and possible past.&ensp;
 <br/>&emsp;At the car, I put the
 new towels in the salt-encrusted gym bag that the wave hadn't quite taken, likely because it had
-been weighted down by a nearly new bottle of sunscreen.&ensp;
+been weighed down by a nearly new bottle of sunscreen.&ensp;
 <br/>&emsp;I drove north along the coast, noting turnouts where the cliff had been cut nearly to the road by
 hydrodynamics and time.&ensp;At one with no cars I pulled across the southbound lane and parked.&ensp;
 The wind was blowing, as always.&ensp;Trains of brown pelicans were cruising south just offshore.&ensp;
@@ -313,7 +312,8 @@ Two hits apiece and it was getting short.&ensp;I snuffed it against the ragged r
 <br/>&emsp;Sitting on her towel under her big hat she remarked:  "White caps."&ensp;
 <br/>&emsp;"Yeah, I was hoping it'd be a bit warmer.&ensp;Would be with less wind."&ensp;
 <br/>&emsp;She turned.&ensp;"Here."&ensp;
-She rolled over and onto me, hands on my shoulders, delicate rhinal foreplay.&ensp;Definitely warmer.&ensp;
+She rolled over and onto me, hands on my shoulders, 
+and rubbed her nose against mine but not clicking shades.&ensp;Definitely warmer.&ensp;
 After a few moments she sat up, arching her back to unclip her top and let it slide down her arms.&ensp;
 Her hat was tilted back a bit, points of sky-brightness peeking through intersections of woven straw,
 a Renaissance halo effect, <i>Saint Ray-Ban With Attendant Areolae</i>.&ensp;
